--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,6 +6,8 @@
 	{% block head %}
 	<title>{% block title %}{% endblock %} - Reportas</title>
 	{% endblock %}
+
+	{% block styles %}{% endblock %}
 </head>
 
 <body>
