--- a/app/templates/reports/parser.html
+++ b/app/templates/reports/parser.html
@@ -5,33 +5,36 @@
 {% block styles %}
 {{ super() }}
 <style>
-    #report-table tr, 
-    #report-table th,
+    #report {
+        height: 400px;
+        overflow: scroll;
+        border: 1px solid black;
+    }
+    #report-table {
+        border-collapse: collapse;
+        width: 100%;
+        height: 100%;
+    }
+
+    #report-table tr,
     #report-table td 
     { 
         font-family: "Courier New", Courier, monospace;
-        font-size: 1.0em;
-    }
-    #report-table td:not(:first-child) {
-        min-width: 50px;
-    }
-    /*#report-table td.content {
-        white-space: pre; 
-    }*/
-    #report-table {
-        border-collapse: collapse;
-    }
-    #report-table, 
-    #report-table td, 
-    #report-table th {
+        font-size: 0.9em;
         border: 1px solid black;
     }
+    #report-table th {
+        border: 1px solid black;
+        padding: 5px 0px;
+        text-align: center;
+    }
+
     #report-table td.statement > select {
         width: 100%;
-        border: 0px;
+        /*border: 0px;*/
     }
     #report-table td.content {
-        width: 600px;
+        /*width: 600px;*/
     }
     #report-table td.content > input {
         width: 100%;
@@ -43,8 +46,16 @@
     {
         text-align: center;
     }
-    #report-table td.field {
-        padding: 0px 10px;
+    td.pageno,
+    td.statement
+    {
+        width: 5%;
+    }
+    td.field {
+        width: 10%;
+    }
+    td.content {
+        width: 80%;
     }
     .nls-style {
         background-color: lightblue;
@@ -69,46 +80,37 @@
         {% endif %}
     </div>
     
-    <div class="container" id="report">
-        <table id="report-table">
-            <thead>
-                <tr>
-                    <th></th>
-                    <th>page#</th>
-                    <th>row#</th>
-                    <th>statement</th>
-                    <th>field</th>
-                    <th>content</th>
-                </tr>  
-            </thead>
-            <tbody>
-                {% for doc_row, page_no, page_row, content in report.rows %}
-                    {% if page_no in report.nls_pages %}
-                        <tr class="nls-style">
-                    {% elif page_no in report.bls_pages %}
-                        <tr class="bls-style">
-                    {% elif page_no in report.cfs_pages %}
-                        <tr class="cfs-style">
-                    {% else %}
-                        <tr>
-                    {% endif %}
-                        <td class="selector"><input type="checkbox"></td>
-                        <td class="pageno">{{page_no}}</td>
-                        <td class="rowno">{{page_row}}</td>
-                        <td class="statement">
-                            <select class="statement-type">
-                                <option value="bls" {% if page_no in report.bls_pages %} selected="selected" {% endif %}>BLS</option>
-                                <option value="nls" {% if page_no in report.nls_pages %} selected="selected" {% endif %}>NLS</option>
-                                <option value="cfs" {% if page_no in report.cfs_pages %} selected="selected" {% endif %}>CFS</option>
-                                <option value="none" {% if page_no not in (report.bls_pages + report.nls_pages + report.cfs_pages) %} selected="selected" {% endif %}>NONE</option>
-                            </select>
-                        </td>
-                        <td class="field">{{ report.records_map.get(doc_row, None) }}</td>
-                        <td class="content"><input type="text" value="{{content}}"></td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+    <div class="container">
+        <div id="report">
+            <table id="report-table">
+                <thead>
+                    <tr>
+                        <th></th>
+                        <th>page#</th>
+                        <th>field</th>
+                        <th>content</th>
+                    </tr>  
+                </thead>
+                <tbody>
+                    {% for doc_row, page_no, page_row, content in report.rows %}
+                        {% if page_no in report.nls_pages %}
+                            <tr class="nls-style">
+                        {% elif page_no in report.bls_pages %}
+                            <tr class="bls-style">
+                        {% elif page_no in report.cfs_pages %}
+                            <tr class="cfs-style">
+                        {% else %}
+                            <tr>
+                        {% endif %}
+                            <td class="selector"><input type="checkbox"></td>
+                            <td class="pageno">{{page_no}}</td>
+                            <td class="field">{{ report.records_map.get(doc_row, None) }}</td>
+                            <td class="content"><input type="text" value="{{content}}"></td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
     </div>
     
     <div class="container" id="finrecords">
