--- a/app/templates/reports/parser.html
+++ b/app/templates/reports/parser.html
@@ -5,46 +5,59 @@
 {% block styles %}
 {{ super() }}
 <style>
-    #report {
-        height: 400px;
-        overflow: scroll;
-        border: 1px solid black;
+    body {
+        background-color: #333;
+        color: white;
     }
-    #report-table {
+
+    #report-content {
+        height: 600px;
+        overflow-y: scroll;
+        overflow-x: none;
+        background-color: #444444; /*grey;*/
+        border: 1px solid #f0ad4e;
+        /*background-color: red;*/
+    }
+    #report-content table {
         border-collapse: collapse;
         width: 100%;
         height: 100%;
+        background-color: #444444; /*grey;*/
+        color: white;
+        margin-bottom: 10px;
+        border-spacing: 0;
+        display: inline-block;
     }
 
-    #report-table tr,
-    #report-table td 
+    #report-content tr,
+    #report-content td 
     { 
         font-family: "Courier New", Courier, monospace;
         font-size: 0.9em;
         border: 1px solid black;
     }
-    #report-table th {
+    #report-content th {
         border: 1px solid black;
         padding: 5px 0px;
         text-align: center;
+        background-color: #f0ad4e;
+        color: black;
+        font-weight: bold;
     }
 
-    #report-table td.statement > select {
-        width: 100%;
-        /*border: 0px;*/
-    }
-    #report-table td.content {
-        /*width: 600px;*/
-    }
-    #report-table td.content > input {
+    #report-content td.content > input {
         width: 100%;
         border: 0px;
     }
-    #report-table td.rowno,
-    #report-table td.pageno,
-    #report-table td.field
+    td.rowno,
+    td.pageno,
+    td.field,
+    td.selector
     {
         text-align: center;
+    }
+    td.selector {
+        width: 2%;
     }
     td.pageno,
     td.statement
@@ -55,16 +68,39 @@
         width: 10%;
     }
     td.content {
-        width: 80%;
+        width: 78%;
     }
-    .nls-style {
-        background-color: lightblue;
+    td.content input {
+        background-color: #444444; /*grey;*/
     }
-    .bls-style {
-        background-color: lightgreen;
+    .nls-style,
+    .nls-style td.content input {
+        background-color: #66b3ff;
+        color: black;
     }
-    .cfs-style {
-        background-color: lightcoral;
+    .bls-style,
+    .bls-style td.content input {
+        background-color: #66ff66;
+        color: black;
+    }
+    .cfs-style,
+    .cfs-style td.content input {
+        background-color: #ffff66;
+        color: black;
+    }
+    #report-ui {
+        position: relative;
+        background-color: #333;
+        padding: 5px;
+    }
+    .dropdown-inline {
+        display: inline;
+    }
+    .dropdown-menu {
+        overflow-y: scroll;
+        max-height: 200px;
+        font-family: "Courier New", Courier, monospace;
+        font-size: 0.9em;
     }
 </style>
 {% endblock %}
@@ -81,35 +117,58 @@
     </div>
     
     <div class="container">
-        <div id="report">
-            <table id="report-table">
-                <thead>
-                    <tr>
-                        <th></th>
-                        <th>page#</th>
-                        <th>field</th>
-                        <th>content</th>
-                    </tr>  
-                </thead>
-                <tbody>
-                    {% for doc_row, page_no, page_row, content in report.rows %}
-                        {% if page_no in report.nls_pages %}
-                            <tr class="nls-style">
-                        {% elif page_no in report.bls_pages %}
-                            <tr class="bls-style">
-                        {% elif page_no in report.cfs_pages %}
-                            <tr class="cfs-style">
-                        {% else %}
-                            <tr>
-                        {% endif %}
-                            <td class="selector"><input type="checkbox"></td>
-                            <td class="pageno">{{page_no}}</td>
-                            <td class="field">{{ report.records_map.get(doc_row, None) }}</td>
-                            <td class="content"><input type="text" value="{{content}}"></td>
-                        </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
+        <div id="report-wrapper">
+            <div id="report-ui">
+                <div class="dropdown dropdown-inline">
+                    <button class="btn btn-primary dropdown-toggle" type="button" id="fields-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                        Financial Records<span class="caret"></span>   
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="fields-menu">
+                        <li><a href="#">NONE</a></li>
+                        {% for field in fields %}
+                            <li><a href="#">{{field}}</a></li>
+                        {% endfor %}
+                    </ul>
+                </div>
+                <button type="button" class="btn btn-success" id="refresh-btn" title="Refresh">
+                    <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
+                </button>
+                <button type="button" class="btn btn-danger" id="remove-btn" title="Trash">
+                    <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                </button>
+            </div>  
+            <div id="report-content">
+                <table id="report-table">
+                    <thead>
+                        <tr>
+                            <th></th>
+                            <th>page#</th>
+                            <th>field</th>
+                            <th>content</th>
+                        </tr>  
+                    </thead>
+                    <tbody>
+                        {% for doc_row, page_no, page_row, content in report.rows %}
+                            {% if page_no in report.nls_pages %}
+                                <tr class="nls-style">
+                            {% elif page_no in report.bls_pages %}
+                                <tr class="bls-style">
+                            {% elif page_no in report.cfs_pages %}
+                                <tr class="cfs-style">
+                            {% else %}
+                                <tr>
+                            {% endif %}
+                                <td class="selector"><input type="checkbox"></td>
+                                <td class="pageno">{{page_no}}</td>
+                                <td class="field">
+                                    {{report.records_map.get(doc_row, None)}}
+                                </td>
+                                <td class="content"><input type="text" value="{{content}}"></td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
     
