--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,7 +5,9 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    {% block responsivnes %}
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    {% endblock %}
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>{% block title %}{% endblock %} - Reportas</title>
 
