--- a/app/templates/reports/parser.html
+++ b/app/templates/reports/parser.html
@@ -122,8 +122,9 @@
         top: 50%;
         transform: translateY(-50%);
     }
-    .td-with-form {
+    .item-selector {
         padding: 10px 0px 0px 0px;
+        background-color: #f2f2f2;
     }
     .select-auto {
          width:auto !important;
@@ -144,6 +145,12 @@
     }
     th.item-range {
         text-align: center;
+    }
+    .modal-body p {
+        font-family: "Courier New", Courier, monospace;
+        font-size: 0.9em;
+        white-space: pre;
+        overflow: scroll;
     }
 </style>
 {% endblock %}
@@ -238,7 +245,7 @@
                                 <td class="selector"><input type="checkbox"></td>
                                 <td class="pageno">{{page_no}}</td>
                                 <td class="field">
-                                    <span>{{report.records_map.get(doc_row, None)}}</span>
+                                    <span>{{report.items_map.get(doc_row, None)}}</span>
                                 </td>
                                 <td class="content"><input type="text" value="{{content}}"></td>
                             </tr>
@@ -287,7 +294,13 @@
                                             <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
                                         </button>
                                     </td>
-                                    <td><span>{{item}}</span></td>
+                                    <td data-item-source="{{ report.items_source.get(item, '') }}">
+                                        {% if item in report.items_source %}
+                                            <a href="#" data-toggle="modal" data-target="#item-source-modal">{{item}}</a>
+                                        {% else %}
+                                            {{item}} 
+                                        {% endif %}
+                                    </td>
                                     {% for value in values %}
                                         <td class="item-value"><input type="text" value="{{value}}"></td>
                                     {% endfor %}
@@ -371,20 +384,48 @@
             </div>
         </div>
     </div>
+
+    <div class="modal fade" tabindex="-1" role="dialog" id="item-source-modal">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title"></h4>
+                </div>
+                <div class="modal-body"></div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+
 {% endblock %}
 
 {% block body_scripts %}
     <script src="{{ url_for('static', filename='vendors/jquery.hoverIntent.js') }}"></script>
     <script src="{{ url_for('static', filename='js/parser.js') }}"></script>
     <script>
-        $(".btn-item-remove").click(function() {
+
+        $("#item-source-modal").on("show.bs.modal", function (e) {
+            var $invoker = $(e.relatedTarget); 
+            $(this).find(".modal-title").text(
+                "Reference for '" + $invoker.text() + "'"
+            );
+            $(this).find(".modal-body").html(
+                "<p>" + $invoker.closest("td").data("item-source") + "</p>"
+            );
+        });
+
+        $(document).on("click", ".btn-item-remove", function() {
             $(this).closest("tr").remove();
         });
+
         $("#report-table tr").hoverIntent({
             over: function() { // IN
                 var $trow = $(this);
                 var $btn = createPlusBtn(function() {
-                    if ($trow.next().find(".td-with-form").length == 0) {
+                    if (!$trow.next().hasClass("item-selector")) {
                         var $rselector = createItemSelector(2);
                         $rselector.insertAfter($trow);
                     }
@@ -456,6 +497,31 @@
             $(this).closest("tr").remove();
         });
 
+        $(document).on("click", ".btn-item-add", function() {
+            var source = $(this).closest("tr").prev().find("td.content > input").val();
+            var name = $("#item-name :selected").text();
+            var statement = $("#item-statement :selected").text();
+            var values = $(this).closest("form").find("input.item-value").map(
+                function () {
+                    return $(this).val();
+                }
+            ).get();
+            if (name === "NONE") {
+                alert("No item selected. Please select one of the item from the list.");
+            } else {
+                var $trow = createItemRow(name, statement, values, source);
+                if (statement == "BLS") {
+                    $("#bls-items tbody").append($trow);
+                } else if (statement == "NLS") {
+                    $("#nls-items tbody").append($trow);
+                } else {
+                    $("#cfs-items tbody").append($trow);
+                }
+                alert("The item has been successfully added to the list.");
+                $(this).closest("tr").remove();
+            }
+        });
+
         function createPlusBtn(onclick) {
             var $innerobj = $(
                 "<span/>",
@@ -479,14 +545,15 @@
         function createItemSelector(columns) {
             if (columns === undefined) columns = 2;
 
-            var $row = $("<tr/>");
-            var $cell = $("<td/>", {colspan: "5", class: "td-with-form"});
+            var $row = $("<tr/>", {class: "item-selector"});
+            var $cell = $("<td/>", {colspan: "5"});
 
             var $rselect = $("<select/>", {class: "form-control select-auto input-sm"});
             $("#items-dropdown ul").children().each(function() {
                 var name = $(this).find("a").text();
                 $rselect.append($("<option/>", {text: name}));
             });
+            $rselect.prop("id", "item-name");
 
             var $form = $("<form/>", {class: "form-horizontal"});
 
@@ -505,27 +572,40 @@
             $form.append($formGroup);
 
             $formGroup = $("<div/>", {class: "form-group"});
+            $label = $("<label/>", {class: "control-label col-sm-2", text: "Statement"});
+            $formGroup.append($label);
+            $div = $("<div/>", {class: "col-sm-10"});
+            var $sselect = $("<select/>", {class: "form-control select-auto input-sm"});
+            $sselect.prop("id", "item-statement");
+            $sselect.append($("<option/>", {text: "BLS"}));
+            $sselect.append($("<option/>", {text: "NLS"}));
+            $sselect.append($("<option/>", {text: "CFS"}));
+            $div.append($sselect);
+            $formGroup.append($div);
+            $form.append($formGroup);
+
+            $formGroup = $("<div/>", {class: "form-group"});
             $label = $("<label/>", {class: "control-label col-sm-2", text: "Financial Data"});
             $formGroup.append($label);
             $div = $("<div/>", {class: "form-inline col-sm-10"});
 
             for(var i = 0; i < columns; i++) {
                 $input = $("<input>", {
-                    type: "text", class: "form-control input-sm",
-                    placeholder: "Column " + (i+1)
+                    type: "text", class: "form-control input-sm item-value",
+                    value: "0", placeholder: "Column " + (i+1)
                 });       
                 $div.append($input);
             }
 
             var $button = $(
-                "<button/>", {class: "btn btn-primary btn-md", type: "button"}
+                "<button/>", {class: "btn btn-primary btn-xs", type: "button"}
             );
             $button.append($("<span/>",{class: "glyphicon glyphicon-plus"}));
             $button.click(function() {
                 var columnNo = $(this).parent().find("input").length + 1;
                 $input = $("<input>", {
-                    type: "text", class: "form-control input-sm",
-                    placeholder: "Column " + columnNo
+                    type: "text", class: "form-control input-sm item-value",
+                    value: "0", placeholder: "Column " + columnNo
                 });       
                 $input.insertBefore($(this));
             });
@@ -560,6 +640,42 @@
 
             $cell.append($form);
             $row.append($cell);
+
+            return $row;
+        }
+
+        function createItemRow(name, statement, values, source) {
+            var $row = $("<tr/>");
+            var $td;
+
+            $td = $("<td/>");
+            var $button = $(
+                "<button/>", 
+                {class: "btn btn-danger btn-xs btn-item-remove", title: "Trash"}
+            ) 
+            $button.append($("<span/>", {class: "glyphicon glyphicon-trash"}));
+            $td.append($button);
+            $row.append($td);
+
+            $td = $("<td/>");
+            if (source === undefined) {
+                $td.data("item-source", "");
+                $td.text(name);
+            } else {
+                $td.data("item-source", source);
+                var $link = $(
+                    "<a/>", {href: "#", text: name, "data-toggle": "modal",
+                             "data-target": "#item-source-modal"}
+                );
+                $td.append($link);
+            }
+            $row.append($td);
+
+            for (var i = 0; i < values.length; i++) {
+                $td = $("<td/>", {class: "item-value"});
+                $td.append($("<input/>", {type: "text", value: values[i]}));
+                $row.append($td);
+            }
 
             return $row;
         }
