Update rapi with new resources: records, reports

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,6 +12,7 @@
     <title>{% block title %}{% endblock %} - Reportas</title>
 
     <!-- Bootstrap -->
+    <link href="{{ url_for('static', filename='vendors/normalize.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='vendors/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
 
 
